Added timelog submitting endpoint
