# server/public/swagger.json
@@ -91,6 +91,18 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Feedback": {
+				"properties": {
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"IUserPayload": {
 				"properties": {
 					"email": {
@@ -115,18 +127,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Feedback": {
-				"properties": {
-					"message": {
-						"type": "string"
-					}
-				},
-				"required": [
-					"message"
-				],
-				"type": "object",
-				"additionalProperties": false
-			},
 			"ILoginPayload": {
 				"properties": {
 					"email": {
@@ -139,6 +139,31 @@
 				"required": [
 					"email",
 					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ITimeLogPayload": {
+				"properties": {
+					"description": {
+						"type": "string"
+					},
+					"start": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"end": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"userId": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"description",
+					"start",
+					"userId"
 				],
 				"type": "object",
 				"additionalProperties": false
@@ -161,7 +186,14 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/User"
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/User"
+										},
+										{
+											"$ref": "#/components/schemas/Feedback"
+										}
+									]
 								}
 							}
 						}
@@ -262,6 +294,54 @@
 						}
 					}
 				]
+			}
+		},
+		"/timelog/submit/{userId}": {
+			"post": {
+				"operationId": "SubmitTimelog",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"anyOf": [
+										{
+											"$ref": "#/components/schemas/ITimeLogPayload"
+										},
+										{
+											"$ref": "#/components/schemas/Feedback"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Timelog"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "userId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ITimeLogPayload"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
