# server/src/controllers/timelog.controller.ts
@@ -1,7 +1,8 @@
 import {Body, Post, Get, Route, Tags} from "tsoa";
 import {TimeLog} from "../models/timelog.entity";
-import { getAllTimelogs } from "../repositories/timelog.repository";
+import {getAllTimelogs, submitTimelog} from "../repositories/timelog.repository";
 import {Feedback} from "../interfaces/user.interface";
+import {ITimeLogPayload} from "../interfaces/timelog.interface";
 
 
 @Route("timelog")
@@ -11,4 +12,9 @@ export default class TimelogController{
     public async getAllTimelogs(userId: string): Promise<TimeLog[] | Feedback>{
         return getAllTimelogs(userId)
     }
+    @Post("/submit/:userId")
+    public async submitTimelog(@Body() body: ITimeLogPayload, userId: string): Promise<ITimeLogPayload | Feedback>{
+        return submitTimelog(body, userId)
+    }
+
 }
