# server/src/routes/timelog.router.ts
@@ -1,11 +1,18 @@
 import express, {Request, Response} from "express";
 import TimelogController from "../controllers/timelog.controller";
+import jwtAuth from "../middleware/auth"
 
 const router = express.Router()
 
-router.get("/times/:userId", async (req: Request, res: Response) => {
+router.get("/times", jwtAuth, async (req: Request, res: Response) => {
     const controller = new TimelogController()
-    const response = await controller.getAllTimelogs(req.params.userId)
+    const response = await controller.getAllTimelogs(req.id)
+    return res.json(response)
+})
+
+router.post("/submit", jwtAuth, async (req: Request, res: Response) => {
+    const controller = new TimelogController()
+    const response = await controller.submitTimelog(req.body, req.id)
     return res.json(response)
 })
 
